src/client/components/organisms/office-result/office-result.scss
.officeResult {
  margin: 20px;

  @include grid-media($sba-grid-medium) {
    margin-left: 30px;
    margin-right: 30px;
    h2 {
      font-size: 20px;
      font-weight: 600;
      margin-bottom: 0;
    }
  }

  h2,
  h3 {
    font-weight: 700;
    word-break: break-word;
  }

  h2 {
    cursor: pointer;
  }

  h3 {
    font-size: 18px;
  }

  @include grid-media($sba-grid-large) {
    h2 {
      font-size: 20px;
      font-weight: 600;
      margin-bottom: 10px;
    }
  }

  hr {
    clear: both;
    margin: 0;
    border: 1px solid #dadada;

    @include grid-media($sba-grid-small) {
      margin: 20px 0 10px;
    }
  }
}

.officeResultContainer {
  display: block;
}

.focus:focus {
  border-color: #002e6d;
  outline: none;
}

.officeType {
  color: #1b1e29;
  font-size: 18px;
  display: inline;
}

.officeType:focus {
  outline: 2px dotted $sba-gray-light;
  outline-offset: 3px;
}

.italic {
  font-style: italic;
}

.fa {
  display: inline-block;
  @include grid-media($sba-grid-small) {
    font-size: 20px;
    vertical-align: middle;
    width: 22px;
  }
  @include grid-media($sba-grid-medium) {
    font-size: 20px;
    vertical-align: middle;
    width: 20px;
  }
}

.serviceList {
  margin: 40px 0 10px;

  @include grid-media($sba-grid-small) {
    margin: 30px 0;

    button {
      width: 100%;
    }
  }
}

.officeWebsiteButton {
  @include grid-media($sba-grid-small) {
    margin: 30px 0;

    button {
      width: 100%;
    }
  }

  @include grid-media($sba-grid-medium) {
    float: right;
    margin-top: 40px;
  }
  @include grid-media($sba-grid-large) {
    float: right;
    margin-top: 40px;
  }
}

.firstResult {
  hr {
    margin: 15px 0 18px;
  }
}

.distance {
  margin-bottom: 5px;
}

.marker {
  float: left;
  display: block;
  color: #c90915;
  margin-right: 5px;
}

.miles {
  float: left;
  margin-top: -4px;
  &:focus {
    outline: 2px dotted $sba-gray-light;
    outline-offset: 3px;
  }
}

.clear {
  clear: both;
}

.detailView {
  width: 100%;
  padding: 20px;
  background: #ffffff;
  position: relative;

  h2 {
    font-size: 20px;
    font-weight: 600;
    margin-bottom: 0;
  }
}

.close {
  position: absolute;
  top: 20px;
  right: 10px;

  i {
    display: block;
    padding: 10px;
    font-size: 20px;
    cursor: pointer;
  }
}

.contactCard {
  border: none;
  padding: 0;
}

.defaultOfficeResult {
  margin: 0 0 0 -10px;
}

.outerDiv {
  display: flex;
  flex-direction: row;
  padding-bottom: 20px;
  border-bottom: 1px solid #dadada;
}

.innerDiv {
  flex-grow: 1;
}

.actions {
  padding-top: 15px;
  margin-right: 20px;
}

.website {
  text-align: center;
  margin-bottom: 18px;
}

.contact {
  text-align: center;
}

.resultPhoneNumber {
  margin-left: 20px;
  margin-top: -20px;

  @include grid-media($sba-grid-medium) {
    margin-left: 30px;
    margin-right: 30px;
  }
}

.contactButton {
  background-color: #fff;
}

